--- a/website_style.css
+++ b/website_style.css
@@ -15,7 +15,9 @@
 #godown{
    height: 60px;
 }
-
+#linkedin {
+  background-color: #0077b5;
+}
 .websiteThumb {
   max-height: 200px;
   max-width: 200px;
