--- a/website_style.css
+++ b/website_style.css
@@ -12,6 +12,10 @@
   align-content: center;
 }
 
+.musicvid {
+  max-width: 100% !important;
+}
+
 #godown{
    height: 60px;
 }
@@ -21,6 +25,18 @@
 .websiteThumb {
   max-height: 200px;
   max-width: 200px;
+}
+#gameon {
+  max-height: 25% !important;
+}
+
+.gif {
+  background-image: url('minefield.gif');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  max-width: 100%;
+  height: 315;
 }
 
 .workHeader {
