--- a/website_style.css
+++ b/website_style.css
@@ -39,8 +39,16 @@
   text-align: center;
 }
 
-.gif {
+#gif {
   background-image: url('minefield.gif');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  max-width: 100%;
+  height: 315;
+}
+
+#tasklist {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
