--- a/website_style.css
+++ b/website_style.css
@@ -1,22 +1,44 @@
-/*
-.firstPageHeader {
-  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-  font-size: 20pt;
-  font-weight: bold;
+#me {
+  max-width: 100%;
+  max-height: 100vh;
+  transition: 2s;
+  margin-left: 20vh;
+  margin-right: 20vh;
+  position: absolute;
 }
-.worktitle {
-  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-  font-size: 14pt;
-  font-weight: bold;
+#picDiv {
+  width: 100%;
 }
-*/
+
+#homeImage {
+  z-index: 1;
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.home-image-div {
+  width: 100%;
+  height: 100%;
+}
+
+#homeImage .fade-in {
+  opacity: 0%;
+  transition: 3s;
+  z-index: 3;
+  max-height: 100%;
+}
+
+#homePageInfoDiv {
+  background-color: rgba(224, 218, 202, 0.75);
+  border: 2pt solid;
+}
+
 #indexBody {
-  background-image: url("/me.jpg");
+  background-image: url("./DSCF5563.jpg");
   background-size: cover;
-/*  background-position: top-left;
-  background-size: 1500px;
-  background-repeat:no-repeat;*/
 }
+
 /*
 .firstPageP {
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
@@ -30,16 +52,19 @@
   max-width: 100% !important;
 }
 
-#godown{
-   height: 60px;
+#godown {
+  height: 60px;
 }
+
 #linkedin {
   background-color: #0077b5;
 }
+
 .websiteThumb {
   max-height: 200px;
   max-width: 200px;
 }
+
 #gameon {
   max-height: 25% !important;
 }
@@ -74,13 +99,13 @@
   max-width: 100%;
 }
 
-.aboutLink{
+.aboutLink {
   text-decoration: inherit;
   color: inherit;
   font-weight: inherit;
 }
 
-.nav-link{
+.nav-link {
   color: black;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
@@ -89,7 +114,8 @@
   color: black;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
-.workButton:hover{
+
+.workButton:hover {
   color: black;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
   font-weight: bolder;
@@ -98,6 +124,7 @@
 .img-fluid {
   width: 100% \9;
 }
+
 .navy {
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
