deleted unnecessary external script references

--- a/website_style.css
+++ b/website_style.css
@@ -1,6 +1,7 @@
 #me {
   height: 95vh;
 }
+
 #picDiv {
   width: 100%;
   justify-content: center;
@@ -44,9 +45,10 @@
   background-size: cover;
 }
 
-.writingHover{
-  background-color: rgb(224,218,202);
+.writingHover {
+  background-color: rgb(224, 218, 202);
 }
+
 .writingHeader h4 {
   font-weight: bold;
   transition: .5s;
@@ -76,8 +78,9 @@
   border-radius: 10pt;
   font-size: 12pt;
   display: inline-block;
-  padding: 1% 2.5% ;
+  padding: 1% 2.5%;
 }
+
 .imageDiv {
   align-content: center;
 }
