--- a/website_style.css
+++ b/website_style.css
@@ -78,6 +78,15 @@
   border-radius: 10pt;
   font-size: 12pt;
   display: inline-block;
+  padding: .75% 2%;
+}
+
+.codeCard {
+  font-weight: bold;
+  border: 1pt solid;
+  border-radius: 10pt;
+  font-size: 10pt;
+  display: inline-block;
   padding: 1% 2.5%;
 }
 
@@ -112,19 +121,19 @@
 
 #gif {
   background-image: url('minefield.gif');
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: contain;
-  max-width: 100%;
-  height: 315;
+  max-width: 90%;
+  max-height: 270px;
 }
 
 #tasklist {
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: contain;
-  max-width: 100%;
-  height: 315;
+  max-width: 90%;
+  max-height: 270px;
 }
 
 .workHeader {
